--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,9 @@
 {
   "name": "actor-web",
-  "version": "0.6.0",
-  "description": "Actor Web Application.",
-  "license": {
-    "type": "Apache-2.0",
-    "url": "http://opensource.org/licenses/apache2.0.php"
-  },
-  "main": "main.js",
+  "version": "0.0.0",
+  "description": "Web messaging application build using Actor platform SDK.",
+  "license": "Apache-2.0",
+  "main": "src/index.js",
   "contributors": [
     "Oleg Shilov <me@olegshilov.com>",
     "prettynatty <fear@loathing.in>"
@@ -22,7 +19,7 @@
     "tests"
   ],
   "dependencies": {
-    "actor-js": "1.0.53",
+    "actor-js": "latest",
     "actor-sdk": "../",
     "babel-polyfill": "^6.2.0",
     "bugsnag-js": "^2.4.8",
@@ -54,12 +51,12 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^6.2.1",
-    "babel-eslint": "^4.1.5",
+    "babel-core": "^6.2.4",
+    "babel-eslint": "^5.0.0-beta4",
     "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-preset-es2015": "^6.2.4",
+    "babel-preset-react": "^6.2.4",
+    "babel-preset-stage-0": "^6.2.4",
     "css-loader": "^0.23.0",
     "eslint": "^1.5.0",
     "eslint-loader": "^1.0.0",
@@ -68,7 +65,6 @@
     "gulp": "^3.9.0",
     "gulp-if": "^2.0.0",
     "gulp-image": "^1.1.1",
-    "gulp-svg-sprite": "^1.2.10",
     "gulp-util": "^3.0.6",
     "json-loader": "^0.5.3",
     "minimist": "^1.1.3",
