--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   ],
   "dependencies": {
     "actor-js": "1.0.53",
+    "assign-deep": "0.4.2",
     "babel-polyfill": "^6.2.0",
     "bugsnag-js": "^2.4.8",
     "classnames": "2.2.1",
