--- a/package.json
+++ b/package.json
@@ -58,19 +58,19 @@
     "babel-polyfill": "^6.2.0",
     "classnames": "2.2.3",
     "crosstab": "0.2.12",
-    "emoji-data": "github:actorapp/emoji-data.git#develop",
+    "emoji-data": "github:actorapp/emoji-data#develop",
     "flexboxgrid": "6.3.0",
     "flux": "2.1.1",
     "immutable": "3.7.6",
     "intl": "1.1.0",
     "js-emoji": "github:actorapp/js-emoji#develop",
-    "jsonlylightbox": "github:actorapp/jsOnlyLightbox.git#develop",
+    "jsonlylightbox": "github:actorapp/jsOnlyLightbox#develop",
     "keymirror": "0.1.1",
     "lodash": "4.3.0",
     "memoizee": "0.3.9",
     "normalize.css": "3.0.3",
     "object-assign": "4.0.1",
-    "opus-recorder": "github:actorapp/Recorderjs.git",
+    "opus-recorder": "github:actorapp/Recorderjs",
     "pace": "github:hubspot/pace",
     "react": "0.14.7",
     "react-addons-css-transition-group": "0.14.7",
@@ -80,9 +80,9 @@
     "react-mixin": "3.0.3",
     "react-modal": "0.6.1",
     "react-router": "2.0.0",
-    "react-scroll": "github:actorapp/react-scroll.git#develop",
+    "react-scroll": "github:actorapp/react-scroll#develop",
     "react-visibility-sensor": "3.0.0",
-    "simple-scrollbar": "github:actorapp/simple-scrollbar.git"
+    "simple-scrollbar": "github:actorapp/simple-scrollbar"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
