chore(web): use actor-emoji npm package instead emoji-data and js-emoji, remove $(npm bin) from package son

--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.15",
   "description": "Actor SDK for building messaging web apps on top of Actor platform",
   "homepage": "https://actor.im/",
-  "license": {
-    "type": "Apache-2.0",
-    "url": "http://opensource.org/licenses/apache2.0.php"
-  },
+  "license": "Apache-2.0",
   "main": "index.js",
   "contributors": [
     "Oleg Shilov <oleg@actor.im>",
@@ -24,22 +21,22 @@
   },
   "scripts": {
     "deps": "npm install -g babel-cli webpack node-sass gulp eslint",
-    "clean": "$(npm bin)/rimraf build && $(npm bin)/rimraf publish",
-    "lint": "$(npm bin)/eslint src",
-    "assets:fonts": "$(npm bin)/copyfiles 'assets/fonts/**/*' build",
-    "assets:emojis": "$(npm bin)/copyfiles -f 'node_modules/emoji-data/sheet_*_64.png' build/assets/images/emoji",
-    "assets:sounds": "$(npm bin)/copyfiles 'assets/sound/**/*' build",
-    "assets:images": "$(npm bin)/copyfiles 'assets/images/**.png' build",
-    "assets:sprite": "$(npm bin)/svg-sprite -w 24 -h 24 --symbol --symbol-sprite icons --symbol-dest images --dest build/assets assets/images/svg/*.svg",
+    "clean": "rimraf build && rimraf publish",
+    "lint": "eslint src",
+    "assets:fonts": "copyfiles 'assets/fonts/**/*' build",
+    "assets:emojis": "copyfiles -f 'node_modules/actor-emoji/sheet_*_64.png' build/assets/images/emoji",
+    "assets:sounds": "copyfiles 'assets/sound/**/*' build",
+    "assets:images": "copyfiles 'assets/images/**.png' build",
+    "assets:sprite": "svg-sprite -w 24 -h 24 --symbol --symbol-sprite icons --symbol-dest images --dest build/assets assets/images/svg/*.svg",
     "assets": "npm run assets:fonts && npm run assets:emojis && npm run assets:sprite && npm run assets:sounds && npm run assets:images",
     "prebuild": "npm run clean && npm run lint && npm run assets",
     "build:babel": "babel src --out-dir build --source-maps",
-    "build:sass": "$(npm bin)/node-sass src/styles/index.scss --include-path node_modules -o build/styles --output-style compressed",
+    "build:sass": "node-sass src/styles/index.scss --include-path node_modules -o build/styles --output-style compressed",
     "build": "npm run build:babel && npm run build:sass",
     "watch:babel": "babel src --out-dir build --watch --source-maps",
-    "watch:sass": "$(npm bin)/node-sass src/styles/index.scss --include-path node_modules -o build/styles --watch",
+    "watch:sass": "node-sass src/styles/index.scss --include-path node_modules -o build/styles --watch",
     "watch": "npm run watch:babel & npm run watch:sass",
-    "prepare": "npm run build && $(npm bin)/copyfiles './*.js' '.gitignore' '.babelrc' '.eslintrc' 'package.json' './src/**/*' './assets/**/*' './example/**/*' './build/**/*' 'README' publish",
+    "prepare": "npm run build && copyfiles './*.js' '.gitignore' '.babelrc' '.eslintrc' 'package.json' './src/**/*' './assets/**/*' './example/**/*' './build/**/*' 'README' publish",
     "start": "npm run clean && npm run build && npm run watch"
   },
   "ignore": [
@@ -52,16 +49,15 @@
   ],
   "dependencies": {
     "actor-js": "latest",
+    "actor-emoji": "latest",
     "assign-deep": "0.4.3",
     "babel-polyfill": "^6.2.0",
     "classnames": "2.2.3",
     "crosstab": "0.2.12",
-    "emoji-data": "github:actorapp/emoji-data#develop",
     "flexboxgrid": "6.3.0",
     "flux": "2.1.1",
     "immutable": "3.7.6",
     "intl": "1.1.0",
-    "js-emoji": "github:actorapp/js-emoji#develop",
     "jsonlylightbox": "github:actorapp/jsOnlyLightbox#develop",
     "keymirror": "0.1.1",
     "lodash": "4.5.1",
