--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.4.0",
-    "babel-eslint": "^5.0.0-beta9",
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-transform-strict-mode": "^6.2.0",
     "babel-preset-es2015": "^6.2.4",
@@ -90,7 +90,7 @@
     "babel-preset-stage-0": "^6.2.4",
     "copyfiles": "^0.2.1",
     "css-loader": "^0.23.0",
-    "eslint": "^2.1.0",
+    "eslint": "~2.2.0",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^4.1.0",
     "file-loader": "^0.8.5",
