--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "actor-js": "latest",
     "actor-emoji": "latest",
     "assign-deep": "0.4.3",
-    "babel-polyfill": "^6.2.0",
+    "babel-polyfill": "6.2.0",
     "classnames": "2.2.3",
     "crosstab": "0.2.12",
     "flexboxgrid": "6.3.0",
@@ -69,6 +69,7 @@
     "react-addons-css-transition-group": "0.14.7",
     "react-addons-pure-render-mixin": "0.14.7",
     "react-dom": "0.14.7",
+    "react-draggable": "1.3.3",
     "react-intl": "2.0.0-beta-2",
     "react-mixin": "3.0.3",
     "react-modal": "0.6.1",
