--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   "dependencies": {
     "actor-emoji": "latest",
     "actor-js": "latest",
-    "assign-deep": "0.4.3",
-    "babel-polyfill": "6.2.0",
+    "assign-deep": "0.4.4",
+    "babel-polyfill": "6.7.2",
     "classnames": "2.2.3",
     "crosstab": "0.2.12",
     "flexboxgrid": "6.3.0",
@@ -60,7 +60,7 @@
     "intl": "1.1.0",
     "jsonlylightbox": "github:actorapp/jsOnlyLightbox#develop",
     "keymirror": "0.1.1",
-    "lodash": "4.5.1",
+    "lodash": "4.6.1",
     "normalize.css": "3.0.3",
     "object-assign": "4.0.1",
     "opus-recorder": "github:actorapp/Recorderjs",
@@ -69,50 +69,50 @@
     "react-addons-css-transition-group": "0.14.7",
     "react-addons-pure-render-mixin": "0.14.7",
     "react-dom": "0.14.7",
-    "react-draggable": "1.3.3",
-    "react-intl": "2.0.0-beta-2",
+    "react-draggable": "1.3.4",
+    "react-intl": "2.0.0-rc-1",
     "react-mixin": "3.0.3",
     "react-modal": "0.6.1",
-    "react-router": "2.0.0",
+    "react-router": "2.0.1",
     "react-scroll": "github:actorapp/react-scroll#develop",
     "react-visibility-sensor": "3.0.0",
     "setimmediate": "^1.0.4",
     "simple-scrollbar": "github:actorapp/simple-scrollbar"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.1.0",
+    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.6.5",
-    "babel-core": "^6.4.0",
+    "babel-core": "^6.7.2",
     "babel-eslint": "^5.0.0",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-strict-mode": "^6.2.0",
-    "babel-preset-es2015": "^6.2.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-strict-mode": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-react": "^6.2.4",
-    "babel-preset-stage-0": "^6.2.4",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "copyfiles": "^0.2.1",
-    "css-loader": "^0.23.0",
+    "css-loader": "^0.23.1",
     "eslint": "~2.2.0",
-    "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^4.1.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.2.1",
     "file-loader": "^0.8.5",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-if": "^2.0.0",
-    "gulp-image": "^1.1.1",
+    "gulp-image": "^1.3.1",
     "gulp-rename": "^1.2.2",
-    "gulp-shell": "^0.5.1",
-    "gulp-util": "^3.0.6",
+    "gulp-shell": "^0.5.2",
+    "gulp-util": "^3.0.7",
     "json-loader": "^0.5.4",
-    "minimist": "^1.1.3",
-    "node-sass": "^3.3.3",
+    "minimist": "^1.2.0",
+    "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
-    "rimraf": "^2.4.4",
+    "rimraf": "^2.5.2",
     "sass-loader": "^3.1.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.0",
     "svg-sprite": "^1.2.19",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
+    "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
 }
