--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "json-loader": "^0.5.4",
     "minimist": "^1.2.0",
     "node-sass": "^3.4.2",
+    "react-addons-perf": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.1.2",
