--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react": "0.14.7",
     "react-addons-css-transition-group": "0.14.7",
     "react-addons-pure-render-mixin": "0.14.7",
+    "react-addons-shallow-compare": "0.14.7",
     "react-dom": "0.14.7",
     "react-draggable": "1.3.4",
     "react-intl": "2.0.0-rc-1",
