chore(web): use babel transform plugins instead stage-0 preset

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
   "presets": [
     "es2015-loose",
-    "react",
-    "stage-0"
+    "react"
   ],
   "plugins": [
-    "transform-strict-mode"
+    "transform-strict-mode",
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ]
 }
