--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "simple-scrollbar": "github:actorapp/simple-scrollbar"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
+    "autoprefixer": "^6.3.3",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
     "babel-eslint": "^5.0.0",
@@ -96,6 +96,7 @@
     "eslint": "~2.2.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
     "gulp-if": "^2.0.0",
@@ -106,6 +107,7 @@
     "json-loader": "^0.5.4",
     "minimist": "^1.2.0",
     "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.2",
     "react-addons-perf": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.2",
