--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-plugin-transform-strict-mode": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.5.0",
     "copyfiles": "^0.2.1",
@@ -109,7 +110,6 @@
     "node-sass": "^3.4.2",
     "postcss-loader": "^0.8.2",
     "react-addons-perf": "^0.14.7",
-    "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.1.2",
     "source-map-loader": "^0.1.5",
