--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "actor-emoji": "latest",
     "actor-js": "latest",
     "assign-deep": "0.4.4",
-    "babel-polyfill": "6.7.2",
+    "babel-polyfill": "6.7.4",
     "classnames": "2.2.3",
     "crosstab": "0.2.12",
     "flexboxgrid": "6.3.0",
@@ -84,7 +84,7 @@
     "autoprefixer": "^6.3.3",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
@@ -95,9 +95,10 @@
     "babel-preset-react": "^6.5.0",
     "copyfiles": "^0.2.1",
     "css-loader": "^0.23.1",
-    "eslint": "~2.2.0",
+    "eslint": "~2.5.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.1",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
@@ -118,6 +119,6 @@
     "svg-sprite": "^1.2.19",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-middleware": "^1.6.1"
   }
 }
