--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "object-assign": "4.0.1",
     "opus-recorder": "github:actorapp/Recorderjs",
     "pace": "github:hubspot/pace",
+    "rc-tooltip": "^3.3.2",
     "react": "0.14.7",
     "react-addons-css-transition-group": "0.14.7",
     "react-addons-pure-render-mixin": "0.14.7",
