fix(web): add unified interface for group creation and inviting

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "crosstab": "0.2.12",
     "flexboxgrid": "6.3.0",
     "flux": "2.1.1",
+    "fuzzaldrin": "2.1.0",
     "highlight.js": "9.2.0",
     "immutable": "3.7.6",
     "intl": "1.1.0",
