chore(web): remove unnecessary log output from Image component, exclude vendor folder from babel transpiling, add task to copy vendor folder on build

--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "assets:sounds": "copyfiles 'assets/sound/**/*' build",
     "assets:images": "copyfiles 'assets/images/**/*.png' build",
     "assets": "npm run assets:fonts && npm run assets:emojis && npm run assets:sounds && npm run assets:images",
-    "prebuild": "npm run clean && npm run lint && npm run assets",
-    "build:babel": "babel src --out-dir build --source-maps",
+    "vendors": "copyfiles -f 'src/vendor/**/*' build/vendor",
+    "prebuild": "npm run clean && npm run lint && npm run assets && npm run vendors",
+    "build:babel": "babel --ignore src/vendor --source-maps -d build src",
     "build:sass": "node-sass src/styles/index.scss --include-path node_modules -o build/styles --output-style compressed",
     "build": "npm run build:babel && npm run build:sass",
     "watch:babel": "babel src --out-dir build --watch --source-maps",
