fix(web): add better scroller in chat
 - lock scroll while exploiring chat history
 - handle resizes
 - fix incorrect scroll position when select another peer

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "quotes": [1, "single"],
     "no-alert": 0,
     "no-underscore-dangle": 0,
+    "no-case-declarations": 0,
     "strict": 0,
     "no-console": 0,
     "no-trailing-spaces": 0,
