--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-polyfill": "6.7.4",
     "classnames": "2.2.3",
     "crosstab": "0.2.12",
+    "fbjs": "0.8.1",
     "flexboxgrid": "6.3.0",
     "flux": "2.1.1",
     "fuzzaldrin": "2.1.0",
@@ -66,7 +67,7 @@
     "object-assign": "4.0.1",
     "opus-recorder": "github:actorapp/Recorderjs",
     "pace": "github:hubspot/pace",
-    "rc-tooltip": "^3.3.2",
+    "rc-tooltip": "3.3.2",
     "react": "0.14.8",
     "react-addons-css-transition-group": "0.14.8",
     "react-addons-pure-render-mixin": "0.14.8",
@@ -74,7 +75,6 @@
     "react-dom": "0.14.8",
     "react-draggable": "1.3.7",
     "react-intl": "2.0.1",
-    "react-mixin": "3.0.4",
     "react-modal": "1.1.0",
     "react-router": "2.2.1",
     "react-scroll": "github:actorapp/react-scroll#develop",
