--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "flux": "2.1.1",
     "fuzzaldrin": "2.1.0",
     "highlight.js": "9.3.0",
-    "immutable": "3.7.6",
+    "immutable": "3.8.1",
     "intl": "1.1.0",
     "jsonlylightbox": "github:actorapp/jsOnlyLightbox#develop",
     "keymirror": "0.1.1",
@@ -74,8 +74,8 @@
     "react-dom": "0.14.8",
     "react-draggable": "1.3.7",
     "react-intl": "2.0.1",
-    "react-modal": "1.1.0",
-    "react-router": "2.2.1",
+    "react-modal": "1.1.2",
+    "react-router": "2.3.0",
     "react-scroll": "github:actorapp/react-scroll#develop",
     "react-visibility-sensor": "3.1.1",
     "setimmediate": "1.0.4",
@@ -85,7 +85,7 @@
     "autoprefixer": "^6.3.6",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
+    "babel-eslint": "^6.0.3",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
@@ -96,7 +96,7 @@
     "babel-preset-react": "^6.5.0",
     "copyfiles": "^0.2.1",
     "css-loader": "^0.23.1",
-    "eslint": "~2.7.0",
+    "eslint": "^2.8.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.3.0",
     "express": "^4.13.4",
@@ -118,7 +118,7 @@
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.15",
+    "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1"
   }
 }
