--- a/package.json
+++ b/package.json
@@ -88,13 +88,7 @@
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-class-properties": "^6.6.0",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-plugin-transform-strict-mode": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-actor": "^1.0.0",
     "copyfiles": "^0.2.1",
     "css-loader": "^0.23.1",
     "eslint": "~2.7.0",
